--- a/code-clash-frontend/package.json
+++ b/code-clash-frontend/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "^2.1.5",
     "react-syntax-highlighter": "^8.0.1"
   },
   "scripts": {
