--- a/code-clash-frontend/package.json
+++ b/code-clash-frontend/package.json
@@ -7,9 +7,11 @@
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
-    "react-syntax-highlighter": "^8.0.1"
+    "react-syntax-highlighter": "^8.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
