--- a/code-clash-frontend/package.json
+++ b/code-clash-frontend/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.2",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.3",
     "axios": "^0.18.0",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "^2.1.8",
     "react-syntax-highlighter": "^8.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "typescript": "^3.4.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
