--- a/code-clash-frontend/package.json
+++ b/code-clash-frontend/package.json
@@ -7,8 +7,10 @@
     "@types/node": "^11.13.2",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
+    "@types/react-redux": "^7.0.6",
+    "@types/react-router-dom": "^4.3.2",
     "axios": "^0.18.0",
-    "node-sass-chokidar": "^1.3.3",
+    "node-sass-chokidar": "^1.3.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.1",
